[package]
name = "gameserver-sandbox-rs"
version = "0.1.0"
authors = ["momf <mail@ni-vg.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
uuid = { version = "0.8.1", features = ["v4"] }
chrono = "0.4.10"
sled = "0.31.0"
byteorder = "1.3.4"
actix = "0.9.0"
actix-web = "2.0.0"
actix-web-actors = "2.0.0"
rand = "0.7.3"
actix-rt = "1.0.0"
